--- a/Güter und Dienstleistungen/README
+++ b/Güter und Dienstleistungen/README
@@ -1,1 +1,5 @@
+Zur Erstellung der Abbildung 1 (Dienstleistung über Güter) braucht man die csv-Dateien "Verbrauchsgüter", "Gebrauchsgüter", und "Services".
 
+Zur Erstellung der Abbildung 2 (Gastgewerbe hinkt hinterher) bracuth man die csv-Dateien "Gastgewerbe.csv"
+
+Zur Erstellung der Abbildung 3 ("Transport ist teuer!") braucht man die csv-Datei "Erzeugerpreise_real.csv"
