--- a/Güter und Dienstleistungen/README
+++ b/Güter und Dienstleistungen/README
@@ -1,5 +1,9 @@
-Zur Erstellung der Abbildung 1 (Dienstleistung über Güter) braucht man die csv-Dateien "Verbrauchsgüter", "Gebrauchsgüter", und "Services".
+Zur Erstellung der Abbildung 1 (Dienstleistung über Güter) braucht man die csv-Dateien "Verbrauchsgüter_clean", "Gebrauchsgüter_clean", und "Goods and Services_clean".
 
-Zur Erstellung der Abbildung 2 (Gastgewerbe hinkt hinterher) bracuth man die csv-Dateien "Gastgewerbe.csv"
+Zur Erstellung der Abbildung 2 (Gastgewerbe hinkt hinterher) bracuth man die csv-Dateien "Gastgewerbe_clean.csv"
 
-Zur Erstellung der Abbildung 3 ("Transport ist teuer!") braucht man die csv-Datei "Erzeugerpreise_real.csv"
+Zur Erstellung der Abbildung 3 ("Transport ist teuer!") braucht man die csv-Datei "Erzeugerpreise_real_clean.csv"
+
+Das R-File reproduziert alle Grafiken, man muss nur den file path bei "setwd" austauschen.
+
+Bei Fragen bin ich jederzeit unter alexanderalbrecht.1997@gmail.com erreichbar.
